# snake_game_bevy

./: .gitignore  Cargo.toml  README.md  todo.txt
src/: components.rs  control.rs  events.rs  game_plugin.rs  graphics.rs  input.rs  lib.rs  main.rs  menu_plugin.rs  resources.rs  states.rs
