[package]
name = "snake_game_bevy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"

# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
[dependencies.web-sys]
version = "0.3.66"
default-features = false
features = ["Window"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
# opt-level = 's'
lto = "thin"
# lto = true
# codegen-units = 1

[features]
default = []
debug = []
